tests/parsing/smtlib/v2.6/errors/008_exists_unclosed_2.expected
File "tests/parsing/smtlib/v2.6/errors/008_exists_unclosed_2.smt2", line 2, character 28-34:
2 | (assert (exists ((x int)) x blabla))
                                ^^^^^^
Error while parsing a term, read the symbol 'blabla',
      but expected a closing parenthesis to end the existencially quantified
      formula.
